--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                   <a class="nav-link" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item ms-md-3">
-                  <a class="nav-link" href="#">Products</a>
+                  <a class="nav-link" href="#myTab">Products</a>
                 </li>
                 <li class="nav-item ms-md-3">
-                  <a class="nav-link" href="#">About </a>
+                  <a class="nav-link" href="#keyfeatures">About </a>
                 </li>
                 <li class="nav-item ms-md-3">
                   <a class="px-4 py-2 btn btn-primary" href="#">Contact </a>
